--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-compileJava.options.encoding = 'UTF-8'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
+//compileJava.options.encoding = 'UTF-8'
+//
+//tasks.withType(JavaCompile) {
+//    options.encoding = 'UTF-8'
+//}
